--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,25 @@
 --- #YAML:1.0
-name:                Device-MAS345
-version:             0.02
-abstract:            Reading the Mastech MAS-345 Multimeter
-license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.31
-distribution_type:   module
-requires:     
-    Device::SerialPort:            1
-    Log::Log4perl:                 1
-meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+name:               Device-MAS345
+version:            0.03
+abstract:           Reading the Mastech MAS-345 Multimeter
 author:
     - Mike Schilli <cpan@perlmeister.com>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Device::SerialPort:  1
+    Log::Log4perl:       1
+resources:
+    repository:  http://github.com/mschilli/device-mas345-perl
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
